<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_teacher"
        android:textSize="40sp"
        android:textColor="@color/teal_200" />

    <EditText
        android:id="@+id/EditText1"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/what_say"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignore"
        android:textSize="40sp" />

    <Switch
        android:id="@+id/Switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/turn_off_notificatoin"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_place_for_your_ads"
        android:textSize="20sp"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"/>

</LinearLayout>
